<resources>
    <string name="app_name">WodBook</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="click_to_login">Go back to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="would_you_do_it_again">Would you do it again?</string>
    <string name="add_wod">Add a new wod</string>
    <string name="wod_image_description">Wod image</string>
    <string name="save">Save</string>
    <string name="wod_notes">Notes...</string>
    <string name="wod_date">Date</string>
    <string name="delete">Delete</string>
    <string name="anonymous">Anonymous</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_pictures_path">/Pictures/WodBook</string>
    <string name="random_wod">"Pickup a random wod "</string>
    <string name="click_to_display_good_wods_only">GOOD WODS ONLY --></string>
    <string name="no_good_wod_found_to_display">No good WOD found to display.</string>
    <string name="useraccount">Account</string>
    <string name="username">Name</string>
    <string name="user_account">User account</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New password</string>

</resources>